# 3dstk-webrtc-extension-all-in-one

./: LICENSE
ortc/xplatform/cryptopp/: .gitignore  BUILD.gn
ortc/xplatform/cryptopp/projects/msvs/cryptopp.Universal/: cryptopp.vcxproj
ortc/xplatform/cryptopp/projects/msvs/cryptopp.Win32/: cryptopp.vcxproj
ortc/xplatform/cryptopp/projects/xcode/cryptopp-ios/cryptopp-ios.xcodeproj/: project.pbxproj
ortc/xplatform/cryptopp/projects/xcode/cryptopp-osx/cryptopp-osx.xcodeproj/: project.pbxproj
ortc/xplatform/templates/gn/: ortcBUILD.gn
ortc/xplatform/templates/gn/libc++/: BUILD.gn
ortc/xplatform/templates/gn/libc++abi/: BUILD.gn
ortc/xplatform/zsLib/: BUILD.gn  zslib_sources.gni
ortc/xplatform/zsLib-eventing/: .gitignore  BUILD.gn  zslib_eventing_tool.gni
ortc/xplatform/zsLib-eventing/projects/linux/codelite/: zsLib-eventing.workspace
ortc/xplatform/zsLib-eventing/projects/linux/codelite/zsLib-eventing/: zsLib-eventing.project
ortc/xplatform/zsLib-eventing/projects/linux/codelite/zsLib-eventing-tool/: zsLib-eventing-tool.project
ortc/xplatform/zsLib-eventing/projects/linux/codelite/zsLib-eventing-tool-compiler/: main.cpp  zsLib-eventing-tool-compiler.project
ortc/xplatform/zsLib-eventing/projects/msvc/zsLib.Eventing.Tool.Compiler.Universal/: zsLib.Eventing.Tool.Compiler.vcxproj  zsLib.Eventing.Tool.Compiler.vcxproj.filters
ortc/xplatform/zsLib-eventing/projects/msvc/zsLib.Eventing.Tool.Compiler.Win32/: main.cpp  zsLib.Eventing.Tool.Compiler.vcxproj  zsLib.Eventing.Tool.Compiler.vcxproj.filters
ortc/xplatform/zsLib-eventing/projects/msvc/zsLib.Eventing.Tool.Universal/: zsLib.Eventing.Tool.vcxproj  zsLib.Eventing.Tool.vcxproj.filters
ortc/xplatform/zsLib-eventing/projects/msvc/zsLib.Eventing.Tool.Win32/: zsLib.Eventing.Tool.vcxproj  zsLib.Eventing.Tool.vcxproj.filters
ortc/xplatform/zsLib-eventing/projects/msvc/zsLib.Eventing.Universal/: zsLib.Eventing.vcxproj
ortc/xplatform/zsLib-eventing/projects/msvc/zsLib.Eventing.Win32/: zsLib.Eventing.vcxproj  zsLib.Eventing.vcxproj.filters
ortc/xplatform/zsLib-eventing/projects/xcode/zsLib-Eventing.xcworkspace/: contents.xcworkspacedata
ortc/xplatform/zsLib-eventing/projects/xcode/zsLib-eventing-ios/zsLib-eventing-ios.xcodeproj/: project.pbxproj
ortc/xplatform/zsLib-eventing/projects/xcode/zsLib-eventing-osx/zsLib-eventing-osx.xcodeproj/: project.pbxproj
ortc/xplatform/zsLib-eventing/projects/xcode/zsLib-eventing-tool-ios/zsLib-eventing-tool-ios.xcodeproj/: project.pbxproj
ortc/xplatform/zsLib-eventing/projects/xcode/zsLib-eventing-tool-osx/zsLib-eventing-tool-osx.xcodeproj/: project.pbxproj
ortc/xplatform/zsLib-eventing/projects/xcode/zsLib.Eventing.Compiler.Tool-osx.Tool/zsLib.Eventing.Compiler.Tool/: main.cpp
ortc/xplatform/zsLib-eventing/projects/xcode/zsLib.Eventing.Compiler.Tool-osx.Tool/zsLib.Eventing.Compiler.Tool.xcodeproj/: project.pbxproj
ortc/xplatform/zsLib-eventing/zsLib/eventing/: IEventingTypes.h  IHelper.h  IIDLTypes.h  IRemoteEventing.h
ortc/xplatform/zsLib-eventing/zsLib/eventing/cpp/: zsLib_eventing.cpp  zsLib_eventing_EventingTypes.cpp  zsLib_eventing_Hasher.cpp  zsLib_eventing_Helper.cpp  zsLib_eventing_IDLTypes.cpp  zsLib_eventing_RemoteEventing.cpp
ortc/xplatform/zsLib-eventing/zsLib/eventing/internal/: zsLib_eventing_RemoteEventing.h
ortc/xplatform/zsLib-eventing/zsLib/eventing/tool/: ICommandLine.h  ICompiler.h  OutputStream.h
ortc/xplatform/zsLib-eventing/zsLib/eventing/tool/cpp/: zsLib_eventing_tool.cpp  zsLib_eventing_tool_CommandLine.cpp  zsLib_eventing_tool_EventingCompiler.cpp  zsLib_eventing_tool_GenerateHelper.cpp  zsLib_eventing_tool_GenerateJson.cpp  zsLib_eventing_tool_GenerateStructC.cpp  zsLib_eventing_tool_GenerateStructCx.cpp  (+9 more)
ortc/xplatform/zsLib/projects/msvs/zsLib.Test.Win32/: zsLib.Test.vcxproj
ortc/xplatform/zsLib/projects/msvs/zsLib.Universal/: zsLib.vcxproj  zsLib.vcxproj.filters
ortc/xplatform/zsLib/projects/msvs/zsLib.Win32/: zsLib.vcxproj  zsLib.vcxproj.filters
ortc/xplatform/zsLib/zsLib/: Exception.h  IFactory.h  IHelper.h  IPAddress.h  Log.h  MessageQueueAssociator.h  Numeric.h  Promise.h  Proxy.h  ProxySubscriptions.h  SafeInt.h  Socket.h  TearAway.h  XML.h  date.h  helpers.h  types.h
ortc/xplatform/zsLib/zsLib/cpp/: zsLib.cpp  zsLib_Event.cpp  zsLib_Exception.cpp  zsLib_Helper.cpp  zsLib_IPAddress.cpp  zsLib_Log.cpp  zsLib_MessageQueue.cpp  zsLib_MessageQueueAssociator.cpp  zsLib_MessageQueueManager.cpp  zsLib_MessageQueueThread.cpp  zsLib_MessageQueueThreadBasic.cpp  zsLib_MessageQueueThreadPool.cpp  zsLib_MessageQueueThreadUsingBlackberryChannels.cpp  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWinUWP.cpp  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWindows.cpp  zsLib_MessageQueueThreadUsingMainThreadMessageQueueForApple.cpp  zsLib_Numeric.cpp  zsLib_Promise.cpp  zsLib_Proxy.cpp  zsLib_RangeSelection.cpp  zsLib_Settings.cpp  zsLib_Singleton.cpp  zsLib_Socket.cpp  zsLib_SocketMonitor.cpp  zsLib_String.cpp  zsLib_Stringize.cpp  zsLib_Timer.cpp  zsLib_TimerMonitor.cpp  zsLib_WindowsEventProviderLogger.cpp  zsLib_XML.cpp  zsLib_XMLAttribute.cpp  zsLib_XMLComment.cpp  zsLib_XMLDeclaration.cpp  zsLib_XMLDocument.cpp  zsLib_XMLElement.cpp  zsLib_XMLGenerator.cpp  zsLib_XMLNode.cpp  zsLib_XMLParser.cpp  zsLib_XMLParserPos.cpp  zsLib_XMLParserWarningTypes.cpp  (+3 more)
ortc/xplatform/zsLib/zsLib/extras/: zsLib_Rx64GetAddapterAddresses.cpp
ortc/xplatform/zsLib/zsLib/idl/: zsLib.idl
ortc/xplatform/zsLib/zsLib/internal/: platform.h  types.h  zsLib.events_win_etw.man  zsLib_Log.h  zsLib_MessageQueue.h  zsLib_MessageQueueManager.h  zsLib_MessageQueueThreadBasic.h  zsLib_MessageQueueThreadPool.h  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWinUWP.h  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWindows.h  zsLib_Numeric.h  zsLib_Promise.h  zsLib_Proxy.h  zsLib_ProxySubscriptions.h  zsLib_Settings.h  zsLib_Socket.h  zsLib_SocketMonitor.h  zsLib_TearAway.h  zsLib_Timer.h  zsLib_TimerMonitor.h  zsLib_XML.h
ortc/xplatform/zsLib/zsLibTest/: TestProxy.cpp  TestProxyUsingGUIThread.cpp  TestTearAway.cpp
(+89 files in other folders)
