# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

zslib_sources = [
    "../zsLib/zsLib/date.h",
    "../zsLib/zsLib/Event.h",
    "../zsLib/zsLib/Exception.h",
    "../zsLib/zsLib/helpers.h",
    "../zsLib/zsLib/IFactory.h",
    "../zsLib/zsLib/IHelper.h",
    "../zsLib/zsLib/IMessageQueue.h",
    "../zsLib/zsLib/IMessageQueueManager.h",
    "../zsLib/zsLib/IMessageQueueThread.h",
    "../zsLib/zsLib/IMessageQueueThreadPool.h",
    "../zsLib/zsLib/IPAddress.h",
    "../zsLib/zsLib/ISettings.h",
    "../zsLib/zsLib/ITimer.h",
    "../zsLib/zsLib/IWakeDelegate.h",
    "../zsLib/zsLib/Log.h",
    "../zsLib/zsLib/MessageQueueAssociator.h",
    "../zsLib/zsLib/Numeric.h",
    "../zsLib/zsLib/Promise.h",
    "../zsLib/zsLib/Proxy.h",
    "../zsLib/zsLib/ProxySubscriptions.h",
    "../zsLib/zsLib/RangeSelection.h",
    "../zsLib/zsLib/SafeInt.h",
    "../zsLib/zsLib/Singleton.h",
    "../zsLib/zsLib/Socket.h",
    "../zsLib/zsLib/String.h",
    "../zsLib/zsLib/Stringize.h",
    "../zsLib/zsLib/TearAway.h",
    "../zsLib/zsLib/types.h",
    "../zsLib/zsLib/WeightedMovingAverage.h",
    "../zsLib/zsLib/XML.h",
    "../zsLib/zsLib/zsLib.h",
    "../zsLib/zsLib/cpp/zsLib.cpp",
    "../zsLib/zsLib/cpp/zsLib_Event.cpp",
    "../zsLib/zsLib/cpp/zsLib_Exception.cpp",
    "../zsLib/zsLib/cpp/zsLib_Helper.cpp",
    "../zsLib/zsLib/cpp/zsLib_helpers.cpp",
    "../zsLib/zsLib/cpp/zsLib_IPAddress.cpp",
    "../zsLib/zsLib/cpp/zsLib_Log.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueue.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueAssociator.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueManager.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueThread.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueThreadBasic.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueThreadPool.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueThreadUsingBlackberryChannels.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWindows.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWinUWP.cpp",
    "../zsLib/zsLib/cpp/zsLib_MessageQueueThreadUsingMainThreadMessageQueueForApple.cpp",
    "../zsLib/zsLib/cpp/zsLib_Numeric.cpp",
    "../zsLib/zsLib/cpp/zsLib_Promise.cpp",
    "../zsLib/zsLib/cpp/zsLib_Proxy.cpp",
    "../zsLib/zsLib/cpp/zsLib_RangeSelection.cpp",
    "../zsLib/zsLib/cpp/zsLib_Settings.cpp",
    "../zsLib/zsLib/cpp/zsLib_Singleton.cpp",
    "../zsLib/zsLib/cpp/zsLib_Socket.cpp",
    "../zsLib/zsLib/cpp/zsLib_SocketMonitor.cpp",
    "../zsLib/zsLib/cpp/zsLib_String.cpp",
    "../zsLib/zsLib/cpp/zsLib_Stringize.cpp",
    "../zsLib/zsLib/cpp/zsLib_Timer.cpp",
    "../zsLib/zsLib/cpp/zsLib_TimerMonitor.cpp",
    "../zsLib/zsLib/cpp/zsLib_WindowsEventProviderLogger.cpp",
    "../zsLib/zsLib/cpp/zsLib_XML.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLAttribute.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLComment.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLDeclaration.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLDocument.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLElement.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLGenerator.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLNode.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLParser.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLParserPos.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLParserWarningTypes.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLText.cpp",
    "../zsLib/zsLib/cpp/zsLib_XMLUnknown.cpp",
    "../zsLib/zsLib/eventing/EventTypes.h",
    "../zsLib/zsLib/eventing/Log.h",
    "../zsLib/zsLib/eventing/noop.h",
    "../zsLib/zsLib/eventing/internal/zsLib_eventing_EventTypes.h",
    "../zsLib/zsLib/eventing/internal/zsLib_eventing_Log.h",
    "../zsLib/zsLib/internal/platform.h",
    "../zsLib/zsLib/internal/types.h",
    "../zsLib/zsLib/internal/zsLib.events.h",
    "../zsLib/zsLib/internal/zsLib.events_win.h",
    "../zsLib/zsLib/internal/zsLib.events_win_etw.h",
    "../zsLib/zsLib/internal/zsLib_Event.h",
    "../zsLib/zsLib/internal/zsLib_Exception.h",
    "../zsLib/zsLib/internal/zsLib_Helper.h",
    "../zsLib/zsLib/internal/zsLib_IPAddress.h",
    "../zsLib/zsLib/internal/zsLib_Log.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueue.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueManager.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueThread.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueThreadBasic.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueThreadPool.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueThreadUsingBlackberryChannels.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWindows.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWinUWP.h",
    "../zsLib/zsLib/internal/zsLib_MessageQueueThreadUsingMainThreadMessageQueueForApple.h",
    "../zsLib/zsLib/internal/zsLib_Numeric.h",
    "../zsLib/zsLib/internal/zsLib_Promise.h",
    "../zsLib/zsLib/internal/zsLib_Proxy.h",
    "../zsLib/zsLib/internal/zsLib_ProxyPack.h",
    "../zsLib/zsLib/internal/zsLib_ProxySubscriptions.h",
    "../zsLib/zsLib/internal/zsLib_RangeSelection.h",
    "../zsLib/zsLib/internal/zsLib_Settings.h",
    "../zsLib/zsLib/internal/zsLib_Singleton.h",
    "../zsLib/zsLib/internal/zsLib_Socket.h",
    "../zsLib/zsLib/internal/zsLib_SocketMonitor.h",
    "../zsLib/zsLib/internal/zsLib_Stringize.h",
    "../zsLib/zsLib/internal/zsLib_TearAway.h",
    "../zsLib/zsLib/internal/zsLib_Timer.h",
    "../zsLib/zsLib/internal/zsLib_TimerMonitor.h",
    "../zsLib/zsLib/internal/zsLib_XML.h",
  ]

if(!is_win) {
  zslib_sources += [
    "../zsLib/zsLib/extras/zsLib_Rx64GetAddapterAddresses.cpp",
    "../zsLib/zsLib/extras/uuid/config.h",
    "../zsLib/zsLib/extras/uuid/uuid.h",
    "../zsLib/zsLib/extras/uuid/uuid_types.h",
    "../zsLib/zsLib/extras/uuid/uuidd.h",
    "../zsLib/zsLib/extras/uuid/uuidP.h",
  ]
}


