# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

# TODO(kjellander): Rebase this to webrtc/build/common.gypi changes after r6330.


# Target to build all the Ortc production code.
group("ortc") {
    # Only the root target should depend on this.

    public_deps = [
      "zsLib-eventing:zslib-eventing",
      "zsLib-eventing:zslib-eventing-tool",
      "zsLib:zslib",
      "ortclib:libOrtc",
      "ortclib-services",
    ]

    if (host_toolchain == current_toolchain) {
      public_deps += [
        "zsLib-eventing:zslib-eventing-tool-compiler",
      ]
    }
}
